--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,9 @@
   #content3:checked ~ .nav label[for="content3"] span{
     @apply text-white font-medium border-b-2 border-solid border-blue-dark;
   }
+  #add-task::placeholder{
+    @apply font-light text-sm text-gray-light;
+  }
   #todo::placeholder{
     @apply font-medium text-black;
   }
@@ -35,5 +38,17 @@
   }
   #comment::placeholder{
     @apply font-light text-xs text-gray leading-normal;
+  }
+}
+
+@layer components{
+  .btn{
+    @apply font-medium text-xl ;
+  }
+  .btn-submit{
+    @apply bg-blue text-white py-2.5;
+  }
+  .btn-cancel{
+    @apply bg-white text-red py-2.5;
   }
 }
